methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: not found: value isOverBggle
    while (isOverBggle==false){
           ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
    while (isOverBggle==false){
    ^